src/norx/oobject.nim


import
  incl, vector, animSet, clock, display, graphic, texture, OBox, bank, structure, sound

## * Defines

const
  orxOBJECT_KZ_DEFAULT_GROUP* = "default"

## * Event enum
##

type
  orxOBJECT_EVENT* {.size: sizeof(cint).} = enum
    orxOBJECT_EVENT_CREATE = 0, orxOBJECT_EVENT_DELETE, orxOBJECT_EVENT_PREPARE,
    orxOBJECT_EVENT_ENABLE, orxOBJECT_EVENT_DISABLE, orxOBJECT_EVENT_PAUSE,
    orxOBJECT_EVENT_UNPAUSE, orxOBJECT_EVENT_NUMBER,
    orxOBJECT_EVENT_NONE = orxENUM_NONE


## * Internal object structure

type orxOBJECT* = object

proc objectSetup*() {.cdecl, importc: "orxObject_Setup", dynlib: libORX.}
  ## Object module setup

proc objectInit*(): orxSTATUS {.cdecl, importc: "orxObject_Init",
                                 dynlib: libORX.}
  ## Inits the object module.
  ##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc objectExit*() {.cdecl, importc: "orxObject_Exit", dynlib: libORX.}
  ## Exits from the object module.

proc objectCreate*(): ptr orxOBJECT {.cdecl, importc: "orxObject_Create",
                                      dynlib: libORX.}
  ## Creates an empty object.
  ##  @return orxOBJECT / nil

proc objectCreateFromConfig*(zConfigID: cstring): ptr orxOBJECT {.cdecl,
    importc: "orxObject_CreateFromConfig", dynlib: libORX.}
  ## Creates an object from config.
  ##  @param[in]   _zConfigID    Config ID
  ##  @ return orxOBJECT / nil

proc delete*(pstObject: ptr orxOBJECT): orxSTATUS {.cdecl,
    importc: "orxObject_Delete", dynlib: libORX.}
  ## Deletes an object, *unsafe* when called from an event handler: call orxObject_SetLifeTime(orxFLOAT_0) instead
  ##  @param[in] _pstObject        Concerned object
  ##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc update*(pstObject: ptr orxOBJECT; pstClockInfo: ptr orxCLOCK_INFO): orxSTATUS {.
    cdecl, importc: "orxObject_Update", dynlib: libORX.}
  ## Updates an object.
  ##  @param[in] _pstObject        Concerned object
  ##  @param[in] _pstClockInfo     Clock information used to compute new object's state
  ##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc enable*(pstObject: ptr orxOBJECT; bEnable: orxBOOL) {.cdecl,
    importc: "orxObject_Enable", dynlib: libORX.}
  ## Enables/disables an object. Note that enabling/disabling an object is not recursive, so its children will not be affected, see orxObject_EnableRecursive().
  ##  @param[in]   _pstObject    Concerned object
  ##  @param[in]   _bEnable      Enable / disable

proc enableRecursive*(pstObject: ptr orxOBJECT; bEnable: orxBOOL) {.cdecl,
    importc: "orxObject_EnableRecursive", dynlib: libORX.}
  ## Enables/disables an object and all its children.
  ##  @param[in]   _pstObject    Concerned object
  ##  @param[in]   _bEnable      Enable / disable

proc isEnabled*(pstObject: ptr orxOBJECT): orxBOOL {.cdecl,
    importc: "orxObject_IsEnabled", dynlib: libORX.}
  ## Is object enabled?
  ##  @param[in]   _pstObject    Concerned object
  ##  @return      orxTRUE if enabled, orxFALSE otherwise

proc pause*(pstObject: ptr orxOBJECT; bPause: orxBOOL) {.cdecl,
    importc: "orxObject_Pause", dynlib: libORX.}
  ## Pauses/unpauses an object. Note that pausing an object is not recursive, so its children will not be affected, see orxObject_PauseRecursive().
  ##  @param[in]   _pstObject    Concerned object
  ##  @param[in]   _bPause       Pause / unpause

proc pauseRecursive*(pstObject: ptr orxOBJECT; bPause: orxBOOL) {.cdecl,
    importc: "orxObject_PauseRecursive", dynlib: libORX.}
  ## Pauses/unpauses an object and its children.
  ##  @param[in]   _pstObject    Concerned object
  ##  @param[in]   _bPause       Pause / unpause

proc isPaused*(pstObject: ptr orxOBJECT): orxBOOL {.cdecl,
    importc: "orxObject_IsPaused", dynlib: libORX.}
  ## Is object paused?
  ##  @param[in]   _pstObject    Concerned object
  ##  @return      orxTRUE if paused, orxFALSE otherwise

proc setUserData*(pstObject: ptr orxOBJECT; pUserData: pointer) {.cdecl,
    importc: "orxObject_SetUserData", dynlib: libORX.}
  ## @}
  ## @name User data
  ##  @{
  ## Sets user data for an object. Orx ignores the user data, this is a mechanism for attaching custom
  ##  data to be used later by user code.
  ##  @param[in]   _pstObject    Concerned object
  ##  @param[in]   _pUserData    User data to store / nil

proc getUserData*(pstObject: ptr orxOBJECT): pointer {.cdecl,
    importc: "orxObject_GetUserData", dynlib: libORX.}
  ## Gets object's user data.
  ##  @param[in]   _pstObject    Concerned object
  ##  @return      Stored user data / nil

proc setOwner*(pstObject: ptr orxOBJECT; pOwner: pointer) {.cdecl,
    importc: "orxObject_SetOwner", dynlib: libORX.}
  ## @}
  ## @name Ownership
  ##  @{
  ## Sets owner for an object. Ownership in Orx is only about lifetime management. That is, when an object
  ##  dies, it also kills its children. Compare this with orxObject_SetParent().
  ##  Note that the "ChildList" field of an object's config section implies two things; that the object is both
  ##  the owner (orxObject_SetOwner()) and the parent (orxObject_SetParent()) of its children. There is an
  ##  exception to this though; when an object's child has a parent camera, the object is only the owner, and
  ##  the camera is the parent.
  ##  @param[in]   _pstObject    Concerned object
  ##  @param[in]   _pOwner       Owner to set / nil, if owner is an orxOBJECT, the owned object will be added to it as a children

proc getOwner*(pstObject: ptr orxOBJECT): ptr orxSTRUCTURE {.cdecl,
    importc: "orxObject_GetOwner", dynlib: libORX.}
  ## Gets object's owner. See orxObject_SetOwner().
  ##  @param[in]   _pstObject    Concerned object
  ##  @return      Owner / nil

proc getOwnedChild*(pstObject: ptr orxOBJECT): ptr orxOBJECT {.cdecl,
    importc: "orxObject_GetOwnedChild", dynlib: libORX.}
  ## Gets object's first owned child (only if created with a config ChildList / has an owner set with orxObject_SetOwner)
  ##  see orxObject_SetOwner() and orxObject_SetParent() for a comparison of ownership and parenthood in Orx.
  ##  This function is typically used to iterate over the owned children of an object. For example;
  ##  @param[in]   _pstObject    Concerned object
  ##  @return      First owned child object / nil
  # TODO: Fix these code block examples
  #  @code
  #  for(orxOBJECT * pstChild = orxObject_GetOwnedChild(pstObject);
  #      pstChild;
  #      pstChild = orxObject_GetOwnedSibling(pstChild))
  #  {
  #      do_something(pstChild);
  #  } @endcode

proc getOwnedSibling*(pstObject: ptr orxOBJECT): ptr orxOBJECT {.cdecl,
    importc: "orxObject_GetOwnedSibling", dynlib: libORX.}
  ## Gets object's next owned sibling (only if created with a config ChildList / has an owner set with orxObject_SetOwner)
  ##  This function is typically used to iterate over the owned children of an object, see orxObject_GetOwnedChild() for an example.
  ##  @param[in]   _pstObject    Concerned object
  ##  @return      Next sibling object / nil

proc setClock*(pstObject: ptr orxOBJECT; pstClock: ptr orxCLOCK): orxSTATUS {.
    cdecl, importc: "orxObject_SetClock", dynlib: libORX.}
  ## @}
  ## @name Clock
  ##  @{
  ## Sets associated clock for an object.
  ##  @param[in]   _pstObject    Concerned object
  ##  @param[in]   _pstClock     Clock to associate / nil
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc getClock*(pstObject: ptr orxOBJECT): ptr orxCLOCK {.cdecl,
    importc: "orxObject_GetClock", dynlib: libORX.}
  ## Gets object's clock.
  ##  @param[in]   _pstObject    Concerned object
  ##  @return      Associated clock / nil

proc linkStructure*(pstObject: ptr orxOBJECT;
                             pstStructure: ptr orxSTRUCTURE): orxSTATUS {.cdecl,
    importc: "orxObject_LinkStructure", dynlib: libORX.}
  ## @}
  ## @name Linked structures
  ##  @{
  ## Links a structure to an object.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pstStructure   Structure to link
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc unlinkStructure*(pstObject: ptr orxOBJECT;
                               eStructureID: orxSTRUCTURE_ID) {.cdecl,
    importc: "orxObject_UnlinkStructure", dynlib: libORX.}
  ## Unlinks structure from an object, given its structure ID.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _eStructureID   ID of structure to unlink

proc getStructure*(pstObject: ptr orxOBJECT; eStructureID: orxSTRUCTURE_ID): ptr orxSTRUCTURE {.
    cdecl, importc: "_orxObject_GetStructure", dynlib: libORX.}
  ## Structure used by an object get accessor, given its structure ID. Structure must then be cast correctly. (see helper macro
  ##  #orxOBJECT_GET_STRUCTURE())
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _eStructureID   ID of the structure to get
  ##  @return orxSTRUCTURE / nil

proc setFlip*(pstObject: ptr orxOBJECT; bFlipX: orxBOOL; bFlipY: orxBOOL): orxSTATUS {.
    cdecl, importc: "orxObject_SetFlip", dynlib: libORX.}
  ## @}
  ## @name Flip
  ##  @{
  ## Sets object flipping.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _bFlipX         Flip it on X axis
  ##  @param[in]   _bFlipY         Flip it on Y axis
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc getFlip*(pstObject: ptr orxOBJECT; pbFlipX: ptr orxBOOL;
                       pbFlipY: ptr orxBOOL): orxSTATUS {.cdecl,
    importc: "orxObject_GetFlip", dynlib: libORX.}
  ## Gets object flipping.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pbFlipX        X axis flipping
  ##  @param[in]   _pbFlipY        Y axis flipping
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setPivot*(pstObject: ptr orxOBJECT; pvPivot: ptr orxVECTOR): orxSTATUS {.
    cdecl, importc: "orxObject_SetPivot", dynlib: libORX.}
  ## @}
  ## @name Graphic
  ##  @{
  ## Sets object pivot. This is a convenience wrapper around orxGraphic_SetPivot(). The "pivot" is essentially
  ##  what is indicated by the "Pivot" field of a config graphic section.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pvPivot        Object pivot
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setOrigin*(pstObject: ptr orxOBJECT; pvOrigin: ptr orxVECTOR): orxSTATUS {.
    cdecl, importc: "orxObject_SetOrigin", dynlib: libORX.}
  ## Sets object origin. This is a convenience wrapper around orxGraphic_SetOrigin(). The "origin" of a graphic is
  ##  essentially what is indicated by the "TextureOrigin" field of a config graphic section. The "origin" together with
  ##  "size" (see orxObject_SetSize()) defines the sprite of an object.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pvOrigin       Object origin
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setSize*(pstObject: ptr orxOBJECT; pvSize: ptr orxVECTOR): orxSTATUS {.
    cdecl, importc: "orxObject_SetSize", dynlib: libORX.}
  ## Sets object size. For objects that have a graphic attached it's simply a convenience wrapper for orxGraphic_SetSize(),
  ##  but an object can also have a size without a graphic.
  ##  Note the difference between "Scale" and "Size". The size of an object with a non-text graphic is the sprite size in
  ##  pixels on its texture. The object's effective size for rendering and intersection purposes (see orxObject_Pick()
  ##  and friends) is proportional to its "size" multiplied by its "scale". Another important distinction is that the
  ##  scale of an object also affects its children (see orxObject_SetParent() and note the distinction between
  ##  parenthood and ownership).
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pvSize       	Object size
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
